<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.characters.CharactersFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <ImageButton
        android:id="@+id/ib_show_favorites"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/show_favorites_description"
        android:elevation="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_star_outline"
        app:layout_constraintBottom_toBottomOf="@+id/tb_toolbar"
        app:layout_constraintEnd_toEndOf="@id/tb_toolbar"
        app:layout_constraintTop_toTopOf="@id/tb_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_characters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        tools:listitem="@layout/item_character" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:hideAnimationBehavior="inward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        app:showAnimationBehavior="inward" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_try_again"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again_button"
        app:layout_constraintEnd_toEndOf="@id/tv_error"
        app:layout_constraintStart_toStartOf="@id/tv_error"
        app:layout_constraintTop_toBottomOf="@id/tv_error" />
</androidx.constraintlayout.widget.ConstraintLayout>