<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.characterdetails.CharacterDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/placeholder"
            android:contentDescription="@string/image_description"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/view_fade"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_name_description_fade_background"
            app:layout_constraintBottom_toBottomOf="@id/iv_image"
            app:layout_constraintEnd_toEndOf="@id/iv_image"
            app:layout_constraintStart_toStartOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            app:layout_constraintEnd_toEndOf="@id/iv_image"
            app:layout_constraintStart_toStartOf="@id/iv_image"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_image"
            app:layout_constraintEnd_toEndOf="@id/iv_image"
            app:layout_constraintStart_toStartOf="@id/iv_image"
            tools:text="@tools:sample/full_names" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image"
            tools:text="@tools:sample/first_names" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/chip_status"
            app:layout_constraintTop_toTopOf="@id/chip_status"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:id="@+id/tv_origin_location_title"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/origin_location_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_status" />

        <TextView
            android:id="@+id/tv_origin_location"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_origin_location_title"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/tv_last_known_location_title"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_known_location_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_origin_location" />

        <TextView
            android:id="@+id/tv_last_known_location"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_last_known_location_title"
            tools:text="@tools:sample/cities" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_favorite_status"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_to_favorites_button_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_star_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>